--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,34 @@
 <div class= "w-full max-w-xs m-auto text-center">
   <h1 class="text-gray-600 text-4xl ">Please Sign Up</h1>
 </div>
+<%= render "partials/errors" %>
+
+<div class="w-full max-w-2xl m-auto p-6">
+  <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'flex flex-col'}) do |f| %>
+    <%= render "devise/shared/error_messages", resource: resource %>
+    <div class="my-2">
+      <%= f.label :username, class: 'mt-3 text-lg' %>
+      <%= f.text_field :username, autofocus: true, autocomplete: "email", class: 'border-2 rounded-md w-full p-4 text-lg', placeholder: "Name" %>
+    </div>
+    <div>
+      <%= f.label :email, class: 'mt-3 text-lg' %>
+      <%= f.email_field :email, autofocus: true, autocomplete: "email", class: 'border-2 rounded-md w-full p-4 text-lg' ,placeholder: "Email"%>
+    </div>
+    <div>
+      <%= f.label :password, class: 'mt-3 text-lg' %>
+      <% if @minimum_password_length %>
+      <em class="text-sm text-orange-500">(<%= @minimum_password_length %> characters minimum)</em>
+      <% end %>
+      <%= f.password_field :password, autocomplete: "new-password", class: 'border-2 rounded-md w-full p-4 text-lg', placeholder: "Password" %>
+    </div>
+    <div>
+      <%= f.label :password_confirmation, class: 'mt-3 text-lg' %>
+      <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'border-2 rounded-md w-full p-4 text-lg', placeholder: "Re-enter Password" %>
+    </div>
+
+    <div class="flex items-center justify-between mt-2">
+      <%= f.submit "Sign Up", class: "text-lg bg-black text-white p-4" %>
+      <%= link_to "Forgot Password?",  new_user_password_path, class: "text-lg" %>
+    </div>
+  <% end %>
+</div>
