--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,14 +1,13 @@
 <div class= "w-full max-w-xs m-auto text-center">
-  <h1 class="text-gray-600 text-4xl ">Please Sign Up</h1>
+  <h1 class="text-gray-600 text-4xl ">Please, Sign Up</h1>
 </div>
-<%= render "partials/errors" %>
 
 <div class="w-full max-w-2xl m-auto p-6">
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: {class: 'flex flex-col'}) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
     <div class="my-2">
       <%= f.label :username, class: 'mt-3 text-lg' %>
-      <%= f.text_field :username, autofocus: true, autocomplete: "email", class: 'border-2 rounded-md w-full p-4 text-lg', placeholder: "Name" %>
+      <%= f.text_field :username, autofocus: true, autocomplete: "email", class: 'border-2 rounded-md w-full p-4 text-lg', placeholder: "Username" %>
     </div>
     <div>
       <%= f.label :email, class: 'mt-3 text-lg' %>
