Add partial to application layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,12 @@
   </head>
 
   <body>
+<%= render "partials/header" %>
+<%= render "partials/errors" %>
+
      <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
     <%= yield %>
+<%= render "partials/footer" %>
   </body>
 </html>
