--- a/app/views/partials/_header.html.erb
+++ b/app/views/partials/_header.html.erb
@@ -1,1 +1,27 @@
-<h1>header</h1>
+<nav class="flex items-center justify-between bg-gray-100 py-5 px-16 text-xl">
+  <div class="uppercase font-bold">
+      Good
+    <span class="text-yellow-500">
+      Eats
+    </span>
+  </div>
+
+    <div class="font-semibold">
+        <%= link_to 'Home', articles_path, class: "mx-2 p-2 hover:bg-yellow-700" %>
+        <%= link_to 'Spicy Food', new_article_path, class: "mx-2 p-2 hover:bg-yellow-700" %>      
+        <%= link_to 'Normal Food', new_article_path, class: "mx-2 p-2 hover:bg-yellow-700" %>      
+        <%= link_to 'Soup', new_article_path, class: "mx-2 p-2 hover:bg-yellow-700" %>      
+        <%= link_to 'Add Article', new_article_path, class: "mx-2 p-2 hover:bg-yellow-700" %>      
+    </div>
+
+    <div class="text-gray-500 font-semibold">
+      <% if current_user %>
+        <%= link_to current_user.username.humanize, edit_user_registration_path, class: ''  %> |
+        <%= link_to 'Log Out', destroy_user_session_path, method: :delete, class:'' %>
+      <% else %>
+        <%= link_to 'Login', new_user_session_path, class:' uppercase' %> |
+        <%= link_to 'Sign Up', new_user_registration_path,class:' uppercase' %>
+      <% end %>
+    </div>
+  
+</nav> 
