--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,32 +1,33 @@
-<%= form_with(model: article) do |form| %>
-  <% if article.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(article.errors.count, "error") %> prohibited this article from being saved:</h2>
+<div class="w-full px-80">
+<%= form_with(model: article, local: true, html: {class: 'px-15'}) do |form| %>
+ 
+  <div>
+    <%= form.label :title, class: 'mt-3 text-lg' %>
+    <%= form.text_field :title, class: 'border-2 rounded-md w-full p-4 text-lg' %>
+  </div>
 
-      <ul>
-        <% article.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
+  <div class="field">
+    <%= form.label :body, class: 'mt-3 text-lg' %>
+    <%= form.text_area :body, class: 'border-2 rounded-md w-full p-4 text-lg' %>
+  </div>
+
+  <div class="field">
+    <%= form.label :image_url, class: 'mt-3 text-lg' %>
+    <%= form.text_field :image, class: 'border-2 rounded-md w-full p-4 text-lg' %>
+  </div>
+
+   <div class="field flex justify-center items-center my-3">
+    <%= form.label :category_id, 'Select Category:', class: 'mt-3 text-lg mx-2' %>
+    
+    <%= form.select :category_id, options_for_select(@categories), {}, class: 'p-3 border-2 rounded-md mx-2 text-base' %>
     </div>
-  <% end %>
-
-  <div class="field">
-    <%= form.label :title %>
-    <%= form.text_field :title %>
-  </div>
-
-  <div class="field">
-    <%= form.label :body %>
-    <%= form.text_area :body %>
-  </div>
-
-  <div class="field">
-    <%= form.label :image %>
-    <%= form.text_area :image %>
-  </div>
-
-  <div class="actions">
-    <%= form.submit %>
-  </div>
+ 
+  <div class="my-5 flex justify-evenly text-2xl">
+    <div class="">
+      <%= form.submit class: "bg-white border-2 rounded-md p-3 hover:bg-yellow-700 hover:text-white" %>
+    </div>
+    <%= link_to 'Back', articles_path, class: "border-2 rounded-md p-3 hover:bg-yellow-700 hover:text-white" %>
+  </div> 
+   </div>
 <% end %>
+</div>
