Edit article views

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,19 +1,22 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Title:</strong>
-  <%= @article.title %>
-</p>
-
-<p>
-  <strong>Body:</strong>
-  <%= @article.body %>
-</p>
-
-<p>
-  <strong>Image:</strong>
-  <%= @article.image %>
-</p>
-
-<%= link_to 'Edit', edit_article_path(@article) %> |
-<%= link_to 'Back', articles_path %>
+<div class="px-16">
+  <p class="text-2xl p-5">
+    <strong>Title:</strong>
+    <%= @article.title %>
+  </p>
+  <div class="text-xl p-5">
+    <p>
+    <%= @article.body %>
+    </p>
+  </div>
+  <div class="text-xl p-5 flex">
+    <p>
+      <%= image_tag @article.image.to_s %>
+    </p>
+  </div>
+  <div class="text-xl p-5 fle">
+    <%= link_to article_votes_path(@article), method: :post, class: 'p-2' do %>
+     <i class="fa fa-thumbs-up"></i>
+    <% end %>
+    <h2 class='p-2'> <%= @article.votes.count %> <%= (@article.votes.count) == 1 ? 'Vote' : 'Votes'%> on this article</h2>
+  </div>
+</div>
