--- a/app/views/articles/new.html.erb
+++ b/app/views/articles/new.html.erb
@@ -1,5 +1,4 @@
-<h1>New Article</h1>
-
+<div class= "w-full max-w-xs m-auto text-center my-5">
+  <h1 class="text-4xl uppercase">New Article</h1>
+</div>
 <%= render 'form', article: @article %>
-
-<%= link_to 'Back', articles_path %>
