--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -16,7 +16,7 @@
     <div>
       <%= f.label :password, class: 'mt-3 text-lg' %>
       <% if @minimum_password_length %>
-      <em class="text-sm text-orange-500">(<%= @minimum_password_length %> characters minimum)</em>
+      <em class="text-sm">(<%= @minimum_password_length %> characters minimum)</em>
       <% end %>
       <%= f.password_field :password, autocomplete: "new-password", class: 'border-2 rounded-md w-full p-4 text-lg', placeholder: "Password" %>
     </div>
