--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="flex items-center justify-between bg-gray-100 py-5 px-16 text-xl bg-yellow-900 text-white fixed inset-x-0 bottom-0">
+<footer class="flex items-center justify-between bg-gray-100 py-5 px-16 text-xl bg-yellow-900 text-white inset-x-0 bottom-0">
   <div class="uppercase font-bold ">
       Good
     <span class="text-yellow-500">
