--- a/app/views/partials/_errors.html.erb
+++ b/app/views/partials/_errors.html.erb
@@ -1,3 +1,8 @@
+
 <div>
- ! TODO
+  <% flash.each do |key, value| %>
+    <div class="elementToFadeInAndOut border-t border-b  px-4 py-3" role="alert">
+    <div class="flash <%= key %>"><%= value %></div>
+  <% end %>
+  </p>
 </div>
