--- a/app/javascript/stylesheets/application.css
+++ b/app/javascript/stylesheets/application.css
@@ -1,19 +1,20 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
 .sado {
-    margin-top: 20px;
-    border-bottom: 1px solid orange
+  margin-top: 20px;
+  border-bottom: 1px solid orange;
 }
 
 .dark {
-    filter: brightness(50%)
+  filter: brightness(50%);
 }
 
 .acid a:visited {
-    color: white;
-} 
+  color: white;
+}
 
 .lamo {
-    min-height: calc(100vh - 136px);
+  min-height: calc(100vh - 136px);
 }
